--- a/chat-popup-complete.html
+++ b/chat-popup-complete.html
@@ -265,7 +265,7 @@
                     Bienvenido a JRO Asesorías
                 </h3>
                 <p class="text-sm text-gray-600">
-                    Para brindarle la mejor atención, necesitamos algunos datos
+                    Compártenos tu nombre para comenzar
                 </p>
             </div>
             
@@ -487,13 +487,7 @@
             // Mensaje de bienvenida
             const welcomeMessage = `¡Hola ${name}! 👋
 
-Soy el asistente virtual de JRO Asesorías. Estoy aquí para ayudarte a descubrir cómo podemos transformar tu empresa con:
-
-• **Power BI**: Dashboards ejecutivos que revelan oportunidades ocultas
-• **Power Automate**: Automatización que libera hasta 40 horas semanales
-• **Power Apps**: Aplicaciones empresariales sin código
-
-¿Qué desafío empresarial te gustaría resolver hoy?`;
+¿En qué puedo ayudarte hoy?`;
 
             appendMessage(welcomeMessage, false);
             conversationHistory.push({ role: 'assistant', content: welcomeMessage });
@@ -663,6 +657,8 @@ Soy el asistente virtual de JRO Asesorías. Estoy aquí para ayudarte a descubri
         // Log inicial
         console.log('✅ JRO Chat Assistant v2.0 - Premium Design');
         console.log('🎨 Nuevo diseño alineado con la identidad de marca');
+        console.log('💬 Mensaje de bienvenida: Natural y conversacional');
+        console.log('📐 Optimizado para ventana de 520x680px');
     </script>
 </body>
 </html>
