--- a/index.html
+++ b/index.html
@@ -152,11 +152,26 @@
             width: 100%;
             padding: 0 var(--space-lg);
         }
-        
+
+        .alert-banner {
+            width: 100%;
+            background-color: #fff1f2;
+            color: #b91c1c;
+            padding: var(--space-sm) var(--space-lg);
+            text-align: center;
+            font-weight: 600;
+            letter-spacing: -0.01em;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1100;
+        }
+
         /* Premium Navigation */
         .navigation {
             position: fixed;
-            top: 0;
+            top: 3rem;
             left: 0;
             right: 0;
             z-index: 1000;
@@ -317,7 +332,7 @@
             min-height: 100vh;
             display: flex;
             align-items: center;
-            padding-top: 5rem;
+            padding-top: 8rem;
             position: relative;
             overflow: hidden;
         }
@@ -937,6 +952,9 @@
     </style>
 </head>
 <body>
+    <div class="alert-banner">
+        Este es un mensaje de prueba en rojo al inicio de la página.
+    </div>
     <!-- Premium Navigation -->
     <nav class="navigation" id="navigation">
         <div class="container nav-container">
