--- a/index.html
+++ b/index.html
@@ -1339,7 +1339,7 @@
                     </div>
                 </div>
                 
-                <form class="contact-form fade-up" action="https://formspree.io/f/TU_FORM_ID" method="POST">
+                <form class="contact-form fade-up" action="https://formsubmit.co/info@duocapital.cl" method="POST">
                     <div class="form-row">
                         <div class="form-group">
                             <label for="nombre">Nombre *</label>
