--- a/index.html
+++ b/index.html
@@ -1710,8 +1710,8 @@
     position: fixed;
     bottom: 100px;
     right: 24px;
-    width: 400px;
-    height: 550px;
+    width: 480px;
+    height: 580px;
     max-height: calc(100vh - 180px);
     background: white;
     border-radius: 16px;
@@ -1759,7 +1759,8 @@
   .jro-chat-header-info p { 
     margin: 2px 0 0; 
     font-size: 12px; 
-    opacity: 0.8; 
+    opacity: 1;
+    color: #cbd5e1; 
   }
   .jro-chat-status { 
     width: 8px; 
@@ -1907,10 +1908,10 @@
   /* Responsive */
   @media (max-width: 600px) {
     .jro-chat-window { 
-      width: calc(100% - 32px); 
-      right: 16px; 
-      bottom: 100px; 
-      height: 70vh; 
+      width: calc(100% - 24px); 
+      right: 12px; 
+      bottom: 90px; 
+      height: 75vh; 
       max-height: 70vh;
     }
     .jro-chat-button { 
