--- a/index.html
+++ b/index.html
@@ -1755,6 +1755,7 @@
     margin: 0; 
     font-size: 15px; 
     font-weight: 600; 
+    color: white;
   }
   .jro-chat-header-info p { 
     margin: 2px 0 0; 
