--- a/index.html
+++ b/index.html
@@ -1733,7 +1733,7 @@
 
   /* Header del chat */
   .jro-chat-header {
-    background: linear-gradient(135deg, #1e3a8a, #1e40af);
+    background: linear-gradient(135deg, #1f2937, #374151);
     color: white;
     padding: 16px 20px;
     display: flex;
