--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
         /* ============================================
            RESPONSIVE
            ============================================ */
-        @media (max-width: 1024px) {
+        @media (max-width: 768px) {
             .contact-wrapper {
                 grid-template-columns: 1fr;
             }
@@ -1447,8 +1447,6 @@
                     </div>
                 </div>
                 
-                <p style="margin: 0 0 16px; font-size: 0.8rem; color: var(--gris-medio); font-style: italic; text-align: center;">JRO es miembro del Grupo Duocapital</p>
-                
                 <form class="contact-form fade-up" action="https://formsubmit.co/info@duocapital.cl" method="POST">
                     <div class="form-row">
                         <div class="form-group">
@@ -1533,7 +1531,7 @@
                             <i class="fas fa-envelope" style="margin-right: 8px;"></i>
                             info@duocapital.cl
                         </a>
-                        <p style="margin: 4px 0 0; font-size: 0.75rem; color: var(--gris-medio); font-style: italic;">JRO es miembro del Grupo Duocapital</p>
+                        <p style="margin: 4px 0 8px; font-size: 0.75rem; color: var(--gris-medio); font-style: italic;">JRO es miembro del Grupo Duocapital</p>
                         <a href="https://wa.me/56966895746">
                             <i class="fab fa-whatsapp" style="margin-right: 8px;"></i>
                             WhatsApp
