--- a/index.html
+++ b/index.html
@@ -1846,7 +1846,7 @@
 
   /* Header del chat */
   .jro-chat-header {
-    background: linear-gradient(135deg, #1e3a8a, #1e40af);
+    background: linear-gradient(135deg, #0f172a, #1e293b);
     color: white;
     padding: 16px 20px;
     display: flex;
@@ -1867,13 +1867,14 @@
   .jro-chat-header-info h4 { 
     margin: 0; 
     font-size: 15px; 
-    font-weight: 600; 
+    font-weight: 600;
+    color: #ffffff; 
   }
   .jro-chat-header-info p { 
     margin: 2px 0 0; 
     font-size: 12px; 
     opacity: 1;
-    color: #cbd5e1; 
+    color: #94a3b8; 
   }
   .jro-chat-status { 
     width: 8px; 
